--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,19 @@
 @import './header.scss';
-@import './vite-promo.scss';
+@import './hero.scss';
+@import './about.scss';
+@import './description.scss';
+@import './how-to-play.scss';
+@import './feature.scss';
+@import './why-us.scss';
+@import './reviews.scss';
+@import './gallery.scss';
+@import './google.scss';
+@import './faq.scss';
+@import './footer.scss';
+
+@import './mobile-menu.scss';
+
+@import './pages.scss';
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
