--- a/src/scss/common/_vars.scss
+++ b/src/scss/common/_vars.scss
@@ -1,4 +1,5 @@
-$_main_color: #242424;
-$_main_bg_color: rgba(255, 255, 255, 0.87);
-$_header_color: #747bff;
-$_header_accent_color: red;
+$_main_color: #fdfcfc;
+$_header_color: #ffde89;
+$_title_color: #ffeec3;
+
+$_main_bg_color: #1d0000;
