--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,17 +16,42 @@
 @import './pages.scss';
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
+  font-family: 'Alegreya Sans SC', sans-serif;
+  // font-family: "Prompt",  sans-serif;
+  font-size: 14px;
+  line-height: 21.17px;
   font-weight: 400;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  color: #fdfcfc;
+  background-color: #1d0000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  @include media(desktop) {
+    font-size: 18px;
+  }
+}
+.container {
+  margin: 0 auto;
+  padding: 32px 16px;
+
+  @include media(desktop) {
+    padding: 80px 80px;
+  }
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
