--- a/src/scss/common/_mixins.scss
+++ b/src/scss/common/_mixins.scss
@@ -13,15 +13,15 @@ screen types:
     @media screen and (min-width: $mobile) {
       @content;
     }
-  } @else if $_screen == to-tablet {
-    @media screen and (max-width: $to-tablet) {
-      @content;
-    }
-  } @else if $_screen == tablet {
-    @media screen and (min-width: $tablet) {
-      @content;
-    }
-  } @else if $_screen == to-desktop {
+    // } @else if $_screen == to-tablet {
+    //   @media screen and (max-width: $to-tablet) {
+    //     @content;
+    //   }
+    // } @else if $_screen == tablet {
+    //   @media screen and (min-width: $tablet) {
+    //     @content;
+    //   }
+    // } @else if $_screen == to-desktop {
     @media screen and (max-width: $to-desktop) {
       @content;
     }
