--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,30 +1,96 @@
 .header {
-  padding: 20px 0;
+  height: 76px;
+  position: fixed;
+  max-width: 1200px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px 20px;
+  top: 0;
+  z-index: 100;
+  background-color: $_main_bg_color;
+  @include media(desktop) {
+    padding-left: 80px;
+    padding-right: 140px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+.logo {
+  border-radius: 4px;
+  width: 40px;
+  height: 40px;
+}
+
+.logo-link {
+  padding: 10px;
+}
+
+.nav {
+  @include media(to-desktop) {
+    display: none;
+  }
+  margin: auto;
 }
 
 .nav-list {
+  font-family: Alegreya;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 40px;
-
-  @include media(tablet) {
-    justify-content: flex-start;
-  }
-
+  flex-direction: column;
+  gap: 10px;
   @include media(desktop) {
-    justify-content: flex-end;
+    flex-direction: row;
+  }
+}
+
+.header-dropdown {
+  position: fixed;
+  top: -100%;
+  right: 0;
+  transition: top 0.3s ease-in-out;
+  z-index: 100;
+  padding: 8px 16px 32px 32px;
+  background-color: $_main_bg_color;
+  min-width: 177px;
+  @include media(desktop) {
+    display: none;
+  }
+}
+
+.menu-open {
+  background-color: transparent;
+  border: none;
+  padding: 10px 20px;
+  @include media(desktop) {
+    display: none;
   }
 }
 
 .nav-link {
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  @include font(30, 40);
+  display: block;
+  padding: 10px;
   color: $_header_color;
+  font-weight: 500;
+  font-size: 21px;
+  letter-spacing: 0em;
+}
+
+.header-dropdown.open {
+  top: 76px;
+}
+
+.menu-close {
+  margin-left: auto;
+  display: block;
+  padding: 10px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 .nav-link:hover,
 .nav-link:focus {
-  color: $_header_accent_color;
+  // color: $_header_accent_color;
 }
