--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,4 @@
+@import './common/global.scss';
 @import './header.scss';
 @import './hero.scss';
 @import './about.scss';
@@ -11,19 +12,17 @@
 @import './faq.scss';
 @import './footer.scss';
 
-@import './mobile-menu.scss';
-
 @import './pages.scss';
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
+  font-family: Prompt, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 14px;
   font-weight: 400;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  color: #fdfcfc;
+  background-color: #1d0000;
 
+  overflow-x: hidden;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
