--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,26 @@
-<section>
-  <h1>Blaze Union</h1>
-  <p>Forge Your Path to Glory in Blaze Union!</p>
-  <button>google</button>
+<section class="hero" id="hero">
+  <div class="container hero-container">
+    <h1 class="hero-title">Blaze Union</h1>
+    <p class="hero-text">Forge Your Path to Glory in Blaze Union!</p>
+    <!-- <button
+      target="_blank"
+      type="button"
+      class="hero-button"
+      onclick="window.location = 'https://play.google.com/store/apps/details?id=jp.co.sting.blaze_union&hl=en&gl=us';"
+    ></button> -->
+
+    <a
+      class="hero-button"
+      target="_blank"
+      href="https://play.google.com/store/apps/details?id=jp.co.sting.blaze_union&hl=en&gl=us"
+    >
+      <img
+        border="0"
+        alt="google"
+        src="../img/hero/google.png"
+        width="200"
+        height="600"
+      />
+    </a>
+  </div>
 </section>
