--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -1,11 +1,99 @@
-// .wrapper {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   height: 100vh;
-//   padding: 20px;
-//   @mixin media($_mobile) {
-//     margin: 0 auto;
-//     padding: 0 15px;
-//   }
-// }
+.hero {
+  background-image: linear-gradient(
+      7deg,
+      #1d0000 6.81%,
+      rgba(29, 0, 0, 0.5) 35.42%,
+      rgba(136, 136, 136, 0) 52.57%
+    ),
+    url('../img/hero/picture_hero.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding-top: 517px;
+  padding-bottom: 32px;
+  margin-top: 60px;
+}
+@media only screen and (min-resolution: 192dpi) and (max-width: 1199px) {
+  .hero {
+    background-image: linear-gradient(
+        7deg,
+        #1d0000 6.81%,
+        rgba(29, 0, 0, 0.5) 35.42%,
+        rgba(136, 136, 136, 0) 52.57%
+      ),
+      url('../img/hero/picture_hero@2x.png');
+  }
+}
+
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.hero-title {
+  font-weight: 700;
+  font-size: 64px;
+  line-height: normal;
+  text-align: start;
+  letter-spacing: -0.32px;
+  color: $_header_color;
+  text-transform: capitalize; // Uncommenting text-transform to return to styling
+}
+.hero-text {
+  font-size: 36px;
+  line-height: normal;
+  letter-spacing: 0.09px;
+  color: $_main_color;
+  margin-bottom: 20px;
+}
+.hero-button {
+  width: 200px;
+  height: 60px;
+  border: none;
+  background-image: url('../img/hero/google.png');
+  background-size: cover;
+}
+
+.hero-button:hover {
+  opacity: 0.8;
+}
+
+.hero-button:active {
+  transform: scale(0.95);
+}
+
+@include media(desktop) {
+  .hero {
+    background-image: linear-gradient(
+        7deg,
+        #1d0000 6.81%,
+        rgba(29, 0, 0, 0.5) 35.42%,
+        rgba(136, 136, 136, 0) 52.57%
+      ),
+      url('../img/hero/picture_hero_desk.png');
+    padding-top: 439px;
+    padding-bottom: 80px;
+  }
+
+  @media only screen and (min-resolution: 192dpi) {
+    .hero {
+      background-image: linear-gradient(
+          7deg,
+          #1d0000 6.81%,
+          rgba(29, 0, 0, 0.5) 35.42%,
+          rgba(136, 136, 136, 0) 52.57%
+        ),
+        url('../img/hero/picture_hero_desk@2x.png');
+    }
+  }
+  .hero-title {
+    font-size: 103px;
+    letter-spacing: -1.545px;
+  }
+  .hero-text {
+    font-size: 51px;
+    line-height: normal;
+    color: $_main_color;
+    margin-bottom: 36px;
+  }
+}
