--- a/src/scss/common/_breakpoints.scss
+++ b/src/scss/common/_breakpoints.scss
@@ -1,5 +1,3 @@
 $mobile: 375px;
-// $to-tablet: 767.98px;
-// $tablet: 768px;
-// $to-desktop: 1199.98px;
+$to-desktop: 1199.98px;
 $desktop: 1200px;
