--- a/src/scss/common/_vars.scss
+++ b/src/scss/common/_vars.scss
@@ -1,5 +1,8 @@
 $_main_color: #fdfcfc;
-$_header_color: #ffde89;
+$_main_bg_color: #1d0000;
+$_header_color: #fff;
+$_yellow_color: #ffde89;
+// $_header_accent_color: red;
+// $_header_color: #ffde89;
 $_title_color: #ffeec3;
 
-$_main_bg_color: #1d0000;
