--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero" id="hero">
+<section id="home" class="hero">
   <div class="container hero-container">
     <h1 class="hero-title">Blaze Union</h1>
     <p class="hero-text">Forge Your Path to Glory in Blaze Union!</p>
