--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -18,7 +18,7 @@
           <p class="review-text">
             "The progression system is fantastic, and the graphics are
             top-notch. The in-game purchases can be a bit pricey, but overall,
-            it’s an amazing game!"
+            it&apos;s an amazing game!"
           </p>
           <p class="review-name">Chris B.</p>
         </div>
