--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,13 +15,12 @@
 @import './pages.scss';
 
 :root {
-  font-family: Prompt, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Alegreya Sans SC', sans-serif;
   font-size: 14px;
 
-  // font-family: 'Alegreya Sans SC', sans-serif;
   // font-family: "Prompt",  sans-serif;
-  // line-height: 21.17px;
-
+  line-height: 21.17px;
+  font-style: normal;
   font-weight: 400;
 
   color: #fdfcfc;
@@ -57,6 +56,6 @@
 
   @include media(desktop) {
     max-width: 1200px;
-    padding: 0 80px;
+    padding: 80px 80px;
   }
 }
