--- a/src/scss/feature.scss
+++ b/src/scss/feature.scss
@@ -42,7 +42,7 @@
   color: $_header_color;
 }
 
-.image {
+.image {width: 375px;
   height: 238px;
 }
 @include media(desktop) {
@@ -74,7 +74,7 @@
     letter-spacing: 0.09px;
   }
 
-  .image {
+  .image {width: 490px;
     height: 300px;
   }
 }
