--- a/src/scss/how-to-play.scss
+++ b/src/scss/how-to-play.scss
@@ -40,6 +40,7 @@
 }
 
 .image {
+  width: 375px;
   height: 238px;
 }
 @include media(desktop) {
@@ -72,6 +73,7 @@
   }
 
   .image {
+    width: 490px;
     height: 300px;
   }
 }
