--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,7 @@
 @import './description.scss';
 @import './how-to-play.scss';
 @import './feature.scss';
+@import './quests.scss';
 @import './why-us.scss';
 @import './reviews.scss';
 @import './gallery.scss';
