--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <a href="#home" class="logo-link">
     <img class="logo" src="img/logo.png" alt="Logo" />
   </a>
-  <!-- <nav class="nav">
+   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-item">
         <a href="#home" class="nav-link">Home</a>
@@ -26,7 +26,7 @@
         <a href="#faq" class="nav-link">FAQ</a>
       </li>
     </ul>
-  </nav> -->
+  </nav>
   <button type="button" class="menu-open">
     <img src="icons/menu-burger.png" alt="Menu Icon" width="30" height="30" />
   </button>
