--- a/src/scss/common/_mixins.scss
+++ b/src/scss/common/_mixins.scss
@@ -21,7 +21,7 @@ screen types:
     //   @media screen and (min-width: $tablet) {
     //     @content;
     //   }
-    // } @else if $_screen == to-desktop {
+    } @else if $_screen == to-desktop {
     @media screen and (max-width: $to-desktop) {
       @content;
     }
