--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,35 +1,37 @@
 <header class="header">
-  <a href="#home" class="logo-link">
-    <img class="logo" src="img/logo.png" alt="Logo" />
-  </a>
-  <!-- <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="#home" class="nav-link">Home</a>
-      </li>
-      <li class="nav-item">
-        <a href="#about" class="nav-link">About</a>
-      </li>
-      <li class="nav-item">
-        <a href="#how-to-play" class="nav-link">How to Play</a>
-      </li>
-      <li class="nav-item">
-        <a href="#why-us" class="nav-link">Why Us</a>
-      </li>
-      <li class="nav-item">
-        <a href="#reviews" class="nav-link">Reviews</a>
-      </li>
-      <li class="nav-item">
-        <a href="#gallery" class="nav-link">Gallery</a>
-      </li>
-      <li class="nav-item">
-        <a href="#faq" class="nav-link">FAQ</a>
-      </li>
-    </ul>
-  </nav> -->
-  <button type="button" class="menu-open">
-    <img src="icons/menu-burger.png" alt="Menu Icon" width="30" height="30" />
-  </button>
+  <div class="header-container">
+    <a href="#home" class="logo-link">
+      <img class="logo" src="img/logo.png" alt="Logo" />
+    </a>
+    <nav class="nav">
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="#home" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#about" class="nav-link">About</a>
+        </li>
+        <li class="nav-item">
+          <a href="#how-to-play" class="nav-link">How to Play</a>
+        </li>
+        <li class="nav-item">
+          <a href="#why-us" class="nav-link">Why Us</a>
+        </li>
+        <li class="nav-item">
+          <a href="#reviews" class="nav-link">Reviews</a>
+        </li>
+        <li class="nav-item">
+          <a href="#gallery" class="nav-link">Gallery</a>
+        </li>
+        <li class="nav-item">
+          <a href="#faq" class="nav-link">FAQ</a>
+        </li>
+      </ul>
+    </nav>
+    <button type="button" class="menu-open">
+      <img src="icons/menu-burger.png" alt="Menu Icon" width="30" height="30" />
+    </button>
+  </div>
 </header>
 <div class="header-dropdown">
   <button type="button" class="menu-close">
