--- a/src/partials/feature.html
+++ b/src/partials/feature.html
@@ -1,8 +1,8 @@
 <section class="future">
   <div class="container feature-container">
-    <h2 class="section-title">Feature Highlights</h2>
-    <ul class="list">
-      <li class="item">
+    <h2 class="feature-section-title">Feature Highlights</h2>
+    <ul class="feature-list">
+      <li class="feature-item">
         <picture class="feature-picture">
           <source
             srcset="
@@ -10,25 +10,29 @@
               ./img/feature/picture3@2x.png 2x
             "
           />
-          <img class="image" src="./img/feature/picture3.png" alt="Tactical" />
+          <img
+            class="feature-image"
+            src="./img/feature/picture3.png"
+            alt="Tactical"
+          />
         </picture>
-        <div class="wrapper">
-          <div class="block-text">
-            <h3 class="title">Tactical Turn-Based Combat</h3>
-            <p class="text">
+        <div class="feature-wrapper">
+          <div class="feature-block-text">
+            <h3 class="feature-title">Tactical Turn-Based Combat</h3>
+            <p class="feature-text">
               Engage in thrilling, strategic battles where every move counts.
             </p>
           </div>
           <div class="block-text">
-            <h3 class="title">Expansive Hero Roster</h3>
-            <p class="text">
+            <h3 class="feature-title">Expansive Hero Roster</h3>
+            <p class="feature-text">
               Unlock and upgrade a diverse selection of warriors, each with
               unique skills and lore.
             </p>
           </div>
         </div>
       </li>
-      <li class="item">
+      <li class="feature-item">
         <picture class="feature-picture">
           <source
             srcset="
@@ -37,29 +41,29 @@
             "
           />
           <img
-            class="image"
+            class="feature-image"
             src="./img/feature/picture.png"
             alt="Stunning Visuals"
           />
         </picture>
-        <div class="wrapper">
-          <div class="block-text">
-            <h3 class="title">Stunning Visuals</h3>
-            <p class="text">
+        <div class="feature-wrapper">
+          <div class="feature-block-text">
+            <h3 class="feature-title">Stunning Visuals</h3>
+            <p class="feature-text">
               Enjoy beautifully crafted environments, spellbinding battle
               animations, and cinematic cutscenes
             </p>
           </div>
-          <div class="block-text">
-            <h3 class="title">Story-Driven Gameplay</h3>
-            <p class="text">
+          <div class="feature-block-text">
+            <h3 class="feature-title">Story-Driven Gameplay</h3>
+            <p class="feature-text">
               Experience an immersive narrative filled with political intrigue,
               unexpected betrayals, and heroic triumphs.
             </p>
           </div>
         </div>
       </li>
-      <li class="item">
+      <li class="feature-item">
         <picture class="feature-picture">
           <source
             srcset="
@@ -68,24 +72,24 @@
             "
           />
           <img
-            class="image"
+            class="feature-image"
             src="./img/feature/picture2.png"
             alt="Competitive PvP Mode"
           />
         </picture>
-        <div class="wrapper">
-          <div class="block-text">
-            <h3 class="title">Competitive PvP Mode</h3>
-            <p class="text">
+        <div class="feature-wrapper">
+          <div class="feature-block-text">
+            <h3 class="feature-title">Competitive PvP Mode</h3>
+            <p class="feature-text">
               Test your skills against other players in real-time strategy
               matches.
             </p>
           </div>
           <div class="block-text">
-            <h3 class="title">Alliance System</h3>
-            <p class="text">
+            <h3 class="feature-title">Alliance System</h3>
+            <p class="feature-text">
               Forge alliances with other players to strengthen your forces and
-              dominate the battlefield
+              dominate the battlefield.
             </p>
           </div>
         </div>
