--- a/src/partials/how-to-play.html
+++ b/src/partials/how-to-play.html
@@ -1,8 +1,8 @@
-<section class="how=-to-play">
+<section class="how-to-play">
   <div class="container how-container">
-    <h2 class="section-title">How to Play</h2>
-    <ul class="list">
-      <li class="item">
+    <h2 class="how-section-title">How to Play</h2>
+    <ul class="how-list">
+      <li class="how-item">
         <picture class="how-picture">
           <source
             srcset="
@@ -11,27 +11,27 @@
             "
           />
           <img
-            class="image"
+            class="how-image"
             src="./img/how-to-play/rectangle-32.png"
             alt="army"
           />
         </picture>
-        <div class="wrapper">
-          <div class="block-text">
-            <h3 class="title">Form Your Army</h3>
-            <p class="text">
+        <div class="how-wrapper">
+          <div class="how-block-text">
+            <h3 class="how-title">Form Your Army</h3>
+            <p class="how-text">
               Recruit and train powerful warriors with unique abilities.
             </p>
           </div>
-          <div class="block-text">
-            <h3 class="title">Strategize Your Battles</h3>
-            <p class="text">
+          <div class="how-block-text">
+            <h3 class="how-title">Strategize Your Battles</h3>
+            <p class="how-text">
               Arrange your troops in tactical formations to gain the upper hand.
             </p>
           </div>
         </div>
       </li>
-      <li class="item">
+      <li class="how-item">
         <picture class="how-picture">
           <source
             srcset="
@@ -40,30 +40,29 @@
             "
           />
           <img
-            class="image"
+            class="how-image"
             src="./img/how-to-play/picture.png"
             alt="Conquer the Kingdom"
           />
         </picture>
-        <div class="wrapper">
-          <div class="block-text">
-            <h3 class="title">Conquer the Kingdom</h3>
-            <p class="text">
+        <div class="how-wrapper">
+          <div class="how-block-text">
+            <h3 class="how-title">Conquer the Kingdom</h3>
+            <p class="how-text">
               Capture enemy strongholds, expand your territory, and establish
               your dominance.
             </p>
           </div>
-          <div class="block-text">
-            >
-            <h3 class="title">Upgrade and Customize</h3>
-            <p class="text">
+          <div class="how-block-text">
+            <h3 class="how-title">Upgrade and Customize</h3>
+            <p class="how-text">
               Enhance your units, unlock legendary weapons, and tailor your
               strategy for different battles.
             </p>
           </div>
         </div>
       </li>
-      <li class="item">
+      <li class="how-item">
         <picture class="how-picture">
           <source
             srcset="
@@ -72,22 +71,22 @@
             "
           />
           <img
-            class="image"
+            class="how-image"
             src="./img/how-to-play/picture2.png"
             alt="Storyline"
           />
         </picture>
-        <div class="wrapper">
-          <div class="block-text">
-            <h3 class="title">Engage in PvP Combat</h3>
-            <p class="text">
+        <div class="how-wrapper">
+          <div class="how-block-text">
+            <h3 class="how-title">Engage in PvP Combat</h3>
+            <p class="how-text">
               Challenge players worldwide and prove your supremacy in intense
               battles.
             </p>
           </div>
-          <div class="block-text">
-            <h3 class="title">Unfold the Storyline</h3>
-            <p class="text">
+          <div class="how-block-text">
+            <h3 class="how-title">Unfold the Storyline</h3>
+            <p class="how-text">
               Immerse yourself in a gripping narrative filled with twists,
               rivalries, and war strategies.
             </p>
