--- a/src/scss/how-to-play.scss
+++ b/src/scss/how-to-play.scss
@@ -3,35 +3,38 @@
   flex-direction: column;
 }
 
-.list {
+.how-list {
   display: flex;
   flex-direction: column;
   gap: 24px;
 }
-.item {
+.how-item {
   display: flex;
   flex-direction: column;
   gap: 24px;
 }
-.item:nth-child(even) {
+.how-item:nth-child(even) {
   text-align: end;
 }
-.wrapper {
+.how-item:nth-child(odd) {
+  flex-direction: row-reverse;
+}
+.how-wrapper {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-.block-text {
+.how-block-text {
   display: flex;
   flex-direction: column;
   gap: 9px;
 }
-.title {
+.how-title {
   font-size: 26px;
   font-style: normal;
   color: $_title_color;
 }
-.text {
+.how-text {
   font-family: Prompt;
   font-size: 14px;
   font-style: normal;
@@ -39,40 +42,40 @@
   color: $_header_color;
 }
 
-.image {
+.how-image {
   width: 375px;
   height: 238px;
 }
 @include media(desktop) {
-  .list {
+  .how-list {
     gap: 40px;
   }
-  .item {
+  .how-item {
     flex-direction: row;
     justify-content: space-between;
   }
-  .item:nth-child(even) {
+  .how-item:nth-child(even) {
     text-align: end;
   }
-  .item:nth-child(odd) {
+  .how-item:nth-child(odd) {
     flex-direction: row-reverse;
   }
-  .wrapper {
+  .how-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 28px 20px;
   }
 
-  .title {
+  .how-title {
     font-size: 36px;
   }
-  .text {
+  .how-text {
     font-size: 18px;
     letter-spacing: 0.09px;
   }
 
-  .image {
+  .how-image {
     width: 490px;
     height: 300px;
   }
