--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -21,8 +21,8 @@
       <picture>
         <source
           srcset="
-            img/about/about-desc.png        1x,
-            img/about/about-desc.png@2x.jpg 2x
+            ./img/about/about-desc.png        1x,
+            ./img/about/about-desc.png@2x.jpg 2x
           "
           media="(min-width: 1200px)"
         />
