--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,10 +1,22 @@
-<footer>
-  <p>Footer content goes here.</p>
-  <nav>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#contact">Contact</a></li>
+<footer class="footer-section">
+  <div class="footer-container footer-flex">
+    <ul class="footer-list">
+      <li class="footer-item"><a href="./privacy.html">Privacy Policy</a></li>
+      <li class="footer-item"><a href="./terms.html">Terms & Conditions</a></li>
+      <li class="footer-item"><a href="./cookies.html">Cookies Policy</a></li>
     </ul>
-  </nav>
+    <div class="footer-rights">
+      <p class="footer-rights-text">
+        All Rights Reserved<a
+          class="footer-rights-text"
+          href="https://blazewinnerway.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          > blazewinnerway.com</a
+        >
+      </p>
+      <span class="footer-span">|</span>
+      <p class="footer-rights-text">2025</p>
+    </div>
+  </div>
 </footer>
