--- a/src/scss/feature.scss
+++ b/src/scss/feature.scss
@@ -35,7 +35,7 @@
   color: $_title_color;
 }
 .feature-text {
-  font-family: Prompt;
+  font-family: 'Prompt', sans-serif;
   font-size: 14px;
   font-style: normal;
   letter-spacing: 0.035px;
