Add footer to all pages

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -27,12 +27,12 @@
           media="(min-width: 1200px)"
         />
         <source
-          srcset="img/about/about-mob.png 1x, img/about/about-mob.png@2x.jpg 2x"
+          srcset="./img/about/about-mob.png 1x, ./img/about/about-mob.png@2x.jpg 2x"
           media="(min-width: 280px)"
         />
         <img
           class="about-picture"
-          src="img/about/about-desc.png"
+          src="./img/about/about-desc.png"
           alt="game hero"
         />
       </picture>
