--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,18 +1,25 @@
 <footer class="footer-section">
   <div class="footer-container footer-flex">
     <ul class="footer-list">
-      <li class="footer-item"><a href="./privacy.html">Privacy Policy</a></li>
-      <li class="footer-item"><a href="./terms.html">Terms & Conditions</a></li>
-      <li class="footer-item"><a href="./cookies.html">Cookies Policy</a></li>
+      <li class="footer-item">
+        <a class="footer-link" href="./privacy.html">Privacy Policy</a>
+      </li>
+      <li class="footer-item">
+        <a class="footer-link" href="./terms.html">Terms & Conditions</a>
+      </li>
+      <li class="footer-item">
+        <a class="footer-link" href="./cookies.html">Cookies Policy</a>
+      </li>
     </ul>
     <div class="footer-rights">
       <p class="footer-rights-text">
         All Rights Reserved<a
-          class="footer-rights-text"
+          class="footer-rights-text footer-link"
           href="https://blazewinnerway.com"
           target="_blank"
           rel="noopener noreferrer"
-          > blazewinnerway.com</a
+        >
+          blazewinnerway.com</a
         >
       </p>
       <span class="footer-span">|</span>
