--- a/src/scss/common/_global.scss
+++ b/src/scss/common/_global.scss
@@ -18,6 +18,16 @@ h2 {
   }
 }
 
+a {
+  transition: color 250ms linear;
+
+  &:hover,
+  &:focus {
+    color: $_yellow_color;
+    outline: none;
+  }
+}
+
 .section {
   padding-top: 32px;
   padding-bottom: 32px;
