Add cookie popup

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -21,13 +21,13 @@
       <picture>
         <source
           srcset="
-            ./img/about/about-desc.png        1x,
-            ./img/about/about-desc.png@2x.jpg 2x
+            ./img/about/about-desc.png    1x,
+            ./img/about/about-desc@2x.png 2x
           "
           media="(min-width: 1200px)"
         />
         <source
-          srcset="./img/about/about-mob.png 1x, ./img/about/about-mob.png@2x.jpg 2x"
+          srcset="./img/about/about-mob.png 1x, ./img/about/about-mob@2x.png 2x"
           media="(min-width: 280px)"
         />
         <img
