--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,6 +12,7 @@
 @import './google.scss';
 @import './faq.scss';
 @import './footer.scss';
+@import './cookie-popup.scss';
 
 @import './pages.scss';
 
