--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,15 @@
 <footer class="footer-section">
   <div class="footer-container footer-flex">
     <ul class="footer-list">
-      <li class="footer-item"><a href="./privacy.html">Privacy Policy</a></li>
-      <li class="footer-item"><a href="./terms.html">Terms & Conditions</a></li>
-      <li class="footer-item"><a href="./cookies.html">Cookies Policy</a></li>
+      <li class="footer-item">
+        <a href="./privacy-policy.html">Privacy Policy</a>
+      </li>
+      <li class="footer-item">
+        <a href="./terms-and-conditions.html">Terms & Conditions</a>
+      </li>
+      <li class="footer-item">
+        <a href="./cookies-policy.html">Cookies Policy</a>
+      </li>
     </ul>
     <div class="footer-rights">
       <p class="footer-rights-text">
@@ -12,7 +18,8 @@
           href="https://blazewinnerway.com"
           target="_blank"
           rel="noopener noreferrer"
-          > blazewinnerway.com</a
+        >
+          blazewinnerway.com</a
         >
       </p>
       <span class="footer-span">|</span>
