--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,13 +2,13 @@
   <div class="footer-container footer-flex">
     <ul class="footer-list">
       <li class="footer-item">
-        <a class="footer-link" href="./privacy.html">Privacy Policy</a>
+        <a href="./privacy-policy.html">Privacy Policy</a>
       </li>
       <li class="footer-item">
-        <a class="footer-link" href="./terms.html">Terms & Conditions</a>
+        <a href="./terms-and-conditions.html">Terms & Conditions</a>
       </li>
       <li class="footer-item">
-        <a class="footer-link" href="./cookies.html">Cookies Policy</a>
+        <a href="./cookies-policy.html">Cookies Policy</a>
       </li>
     </ul>
     <div class="footer-rights">
