Add section Why Us

--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,4 +1,4 @@
-<section id="faq" class="section">
+<section id="faq" class="section faq-section">
   <div class="faq-container">
     <h2>FAQ</h2>
     <div class="accordion">
