--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -44,9 +44,17 @@
 }
 .pages-title {
   font-size: 26px;
-  font-style: normal;
   margin-bottom: 20px;
   color: black;
+}
+.pages-title-weak {
+  font-size: 21px;
+  font-weight: 500;
+  letter-spacing: 0.032px;
+  color: black;
+  @include media(desktop) {
+    font-size: 26px;
+  }
 }
 .pages-text {
   font-family: Prompt;
@@ -54,9 +62,24 @@
   color: black;
   margin-bottom: 20px;
 }
+.pages-text a {
+  &:hover,
+  &:focus {
+    color: blue;
+    outline: none;
+  }
+}
 .pages-list-text {
   color: black;
   margin-bottom: 20px;
+}
+
+.pages-list-text a {
+  &:hover,
+  &:focus {
+    color: blue;
+    outline: none;
+  }
 }
 @include media(desktop) {
   .pages-container {
