--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -9,6 +9,17 @@
   background-size: cover;
   background-repeat: no-repeat;
   padding-top: 517px;
+
+  @include media(desktop) {
+    background-image: linear-gradient(
+        7deg,
+        #1d0000 6.81%,
+        rgba(29, 0, 0, 0.5) 35.42%,
+        rgba(136, 136, 136, 0) 52.57%
+      ),
+      url('../img/hero/picture_hero_desk.png');
+    padding-top: 439px;
+  }
 }
 @media only screen and (min-resolution: 192dpi) and (max-width: 1199px) {
   .hero {
@@ -19,6 +30,15 @@
         rgba(136, 136, 136, 0) 52.57%
       ),
       url('../img/hero/picture_hero@2x.png');
+    @include media(desktop) {
+      background-image: linear-gradient(
+          7deg,
+          #1d0000 6.81%,
+          rgba(29, 0, 0, 0.5) 35.42%,
+          rgba(136, 136, 136, 0) 52.57%
+        ),
+        url('../img/hero/picture_hero_desk@2x.png');
+    }
   }
 }
 
@@ -34,59 +54,35 @@
   text-align: start;
   letter-spacing: -0.32px;
   color: $_yellow_color;
-  text-transform: capitalize; // Uncommenting text-transform to return to styling
+  text-transform: capitalize;
+  @include media(desktop) {
+    font-size: 103px;
+    letter-spacing: -1.545px;
+  }
 }
 .hero-text {
   font-size: 36px;
   letter-spacing: 0.09px;
   color: $_main_color;
   margin-bottom: 20px;
+  @include media(desktop) {
+    font-size: 51px;
+    margin-bottom: 36px;
+  }
 }
 .hero-button {
   width: 200px;
   height: 60px;
   border: none;
-  background-image: url('../img/hero/google.png');
   background-size: cover;
-}
-
-.hero-button:hover {
-  opacity: 0.8;
 }
 
 .hero-button:active {
   transform: scale(0.95);
 }
 
-@include media(desktop) {
-  .hero {
-    background-image: linear-gradient(
-        7deg,
-        #1d0000 6.81%,
-        rgba(29, 0, 0, 0.5) 35.42%,
-        rgba(136, 136, 136, 0) 52.57%
-      ),
-      url('../img/hero/picture_hero_desk.png');
-    padding-top: 439px;
-  }
-
-  @media only screen and (min-resolution: 192dpi) {
-    .hero {
-      background-image: linear-gradient(
-          7deg,
-          #1d0000 6.81%,
-          rgba(29, 0, 0, 0.5) 35.42%,
-          rgba(136, 136, 136, 0) 52.57%
-        ),
-        url('../img/hero/picture_hero_desk@2x.png');
-    }
-  }
-  .hero-title {
-    font-size: 103px;
-    letter-spacing: -1.545px;
-  }
-  .hero-text {
-    font-size: 51px;
-    margin-bottom: 36px;
-  }
+.hero-button:hover,
+.hero-button:focus {
+  box-shadow: 0 0 10px 5px rgba(252, 255, 255, 0.8);
+  opacity: 0.8;
 }
