--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -3,11 +3,22 @@
   flex-direction: column;
   justify-content: center;
   padding: 0 20px 40px 20px;
+  @include media(desktop) {
+    padding: 0 80px 60px 80px;
+  }
 }
 .pages-back-link {
   display: block;
   width: 44px;
   height: 44px;
+  @include media(desktop) {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 175px;
+    height: 50px;
+  }
 }
 .pages-back-link:hover {
   color: $_yellow_color;
@@ -20,6 +31,10 @@
   align-items: center;
   width: 44px;
   height: 44px;
+  @include media(desktop) {
+    width: 40px;
+    height: 40px;
+  }
 }
 .pages-icon {
   width: 9px;
@@ -35,17 +50,27 @@
   align-items: flex-start;
   border-radius: 20px;
   background-color: $_yellow_color;
+  @include media(desktop) {
+    padding: 40px 88px 40px 88px;
+  }
 }
 .pages-content-title {
   font-size: 36px;
   letter-spacing: 0.09px;
   color: black;
   margin-bottom: 20px;
+  @include media(desktop) {
+    font-size: 51px;
+  }
 }
 .pages-title {
   font-size: 26px;
   margin-bottom: 20px;
   color: black;
+  @include media(desktop) {
+    font-size: 36px;
+    letter-spacing: 0.09px;
+  }
 }
 .pages-title-weak {
   font-size: 21px;
@@ -61,6 +86,10 @@
   letter-spacing: 0.035px;
   color: black;
   margin-bottom: 20px;
+  @include media(desktop) {
+    font-size: 16px;
+    letter-spacing: 0.04px;
+  }
 }
 .pages-text a {
   &:hover,
@@ -70,8 +99,19 @@
   }
 }
 .pages-list-text {
+  font-family: Prompt;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.035px;
   color: black;
   margin-bottom: 20px;
+  list-style: inside;
+  @include media(desktop) {
+    font-size: 16px;
+    letter-spacing: 0.04px;
+  }
 }
 
 .pages-list-text a {
@@ -81,42 +121,15 @@
     outline: none;
   }
 }
+.pages-link-accent {
+  text-decoration: underline;
+}
 @include media(desktop) {
-  .pages-container {
-    padding: 0 80px 60px 80px;
-  }
-  .pages-back-link {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 175px;
-    height: 50px;
-  }
-  .pages-header-wrapper {
-    width: 40px;
-    height: 40px;
-  }
-
   .pages-back-text {
     display: block;
     font-family: 'Alegreya Sans SC';
     font-size: 21px;
     font-weight: 500;
     letter-spacing: 0.032px;
-  }
-  .pages-content {
-    padding: 40px 88px 40px 88px;
-  }
-  .pages-content-title {
-    font-size: 51px;
-  }
-  .pages-title {
-    font-size: 36px;
-    letter-spacing: 0.09px;
-  }
-  .pages-text {
-    font-size: 16px;
-    letter-spacing: 0.04px;
   }
 }
