--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -10,7 +10,7 @@
       <img
         border="0"
         alt="google"
-        src="/img/hero/badge.png"
+        src="/img/hero/google.png"
         width="200"
         height="600"
       />
