--- a/src/partials/google.html
+++ b/src/partials/google.html
@@ -11,7 +11,7 @@
       rel="noopener noreferrer"
     >
       <img
-        src="../img/google/badge.png"
+        src="./img/google/badge.png"
         alt="Google Play Button"
         width="210"
         aria-label="go to Google Play"
