--- a/src/partials/how-to-play.html
+++ b/src/partials/how-to-play.html
@@ -1,4 +1,4 @@
-<section class="how-to-play">
+<section id="how-to-play" class="how-to-play">
   <div class="container how-container">
     <h2 class="how-section-title">How to Play</h2>
     <ul class="how-list">
