--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -61,3 +61,6 @@
     </li>
   </ul>
 </div>
+<!-- ============== Progress bar ==================== -->
+<div class="progress-bar"></div>
+<!-- ============== Progress bar ==================== -->
