--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,19 +1,24 @@
 .footer-section {
   padding-top: 21px;
   padding-bottom: 20px;
+  border-top: 1px solid $_yellow_color;
+
   @include media(desktop) {
     padding-bottom: 28px;
   }
-  border-top: 1px solid $_yellow_color;
 }
 
 .footer-container {
   font-family: 'Prompt', sans-serif;
   padding-right: 23px;
   padding-left: 23px;
-  max-width: 1200px;
+  max-width: 375px;
   width: 100%;
   margin: 0 auto;
+
+  @include media(desktop) {
+    max-width: 1200px;
+  }
 }
 
 .footer-flex {
@@ -22,7 +27,10 @@
   justify-content: center;
   gap: 14px;
   width: 100%;
-  max-width: 502px;
+
+  @include media(desktop) {
+    max-width: 502px;
+  }
 }
 
 .footer-list {
@@ -65,5 +73,5 @@
 }
 
 .footer-span {
-    display: block;
+  display: block;
 }
