--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -49,7 +49,7 @@
   justify-content: center;
   align-items: flex-start;
   border-radius: 20px;
-  background-color: $_yellow_color;
+  background-color: #FFEEC3;
   @include media(desktop) {
     padding: 40px 88px 40px 88px;
   }
